--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - McDonald's: Burger, Fries</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/mcdonald.png" />
+    <link rel="icon" type="image/x-icon" href="./mcdonald.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -65,7 +65,7 @@
         <button class="btn-3">Order Now</button>
       </div>
       <div class="cart">
-        <img src="/mcdelivery.jpg" class="img-2" />
+        <img src="./mcdelivery.jpg" class="img-2" />
         <h1>McDelivery</h1>
         <p class="p">Delivering food at your doorsteps.</p>
         <button class="btn-3">Order Now</button>
@@ -79,19 +79,19 @@
     </div>
     <div class="carts mt-2">
       <div class="cart">
-        <img src="/menu.png" class="img-2" />
+        <img src="./menu.png" class="img-2" />
         <h1>Our Menu</h1>
         <p>Our exclusive menu is waiting for you.</p>
         <button class="btn-3">Order Now</button>
       </div>
       <div class="cart">
-        <img src="/trending.png" class="img-2" />
+        <img src="./trending.png" class="img-2" />
         <h1>Trending Now</h1>
         <p class="p">Find out what's new.</p>
         <button class="btn-3">Learn More</button>
       </div>
       <div class="cart">
-        <img src="/careers.png" class="img-2" />
+        <img src="./careers.png" class="img-2" />
         <h1>Careers</h1>
         <p class="p">Be a part of our team.</p>
         <button class="btn-3">Apply Now</button>
@@ -127,8 +127,8 @@
       <i class="fa-brands fa-instagram icon m4"></i>
       <i class="fa-brands fa-linkedin icon m5"></i>
       <i class="fa-brands fa-tiktok icon m6"></i>
-      <img src="/app.png" class="img-3">
-      <img src="/google.png">
+      <img src="./app.png" class="img-3">
+      <img src="./google.png">
     </div>
   </div>
   
